--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,11 +17,11 @@ jobs:
       # install git submodules for managing third-party dependencies
       - run: git submodule sync && git submodule update --init
 
-      - run:
-          name: Install AWS CLI (first install pip, the Python package manager)
-          command: |
-            apt-get install -y python python-dev py-pip build-base
-            pip install awscli
+      # - run:
+      #     name: Install AWS CLI (first install pip, the Python package manager)
+      #     command: |
+      #       apt-get install -y python python-dev py-pip build-base
+      #       pip install awscli
 
       - run:
           name: Install s3deploy from bep
