--- a/config.toml
+++ b/config.toml
@@ -112,6 +112,7 @@ weight = 1
 # For RSS only, apparently
 languageCode = "en-US"
 googleAnalytics = "UA-1040233-7"
+Analytics = "YHYBNXPJ"
 
 [languages.en.params]
     linkedin = "english-link"
@@ -355,6 +356,7 @@ weight = 2
 languageCode = "ja"
 hasCJKLanguage = "true"
 googleAnalytics = "UA-1040233-8"
+Analytics = "RQJNOLGM"
 
 [languages.ja.params]
     linkedin = "リンクドイン"
