Change uptime protocol from secure to non-secure (lol)
So we changed to the excellent "ping" monitor service from @apex (https://apex.sh) but, if you try to use a cname to serve the status pages on your own domain, you get the "ermagah this site is trying to steal your data" error in modern browsers, because the cert for the status pages doesn't cover your domain. So if you can accept the "red lock of shame" indicator for unsecured sites these days, you can share status pages on your own domain, as httP urls.

Signed-off-by: Rick Cogley <rick.cogley@esolia.co.jp>

--- a/config.toml
+++ b/config.toml
@@ -312,7 +312,7 @@ Analytics = "YHYBNXPJ"
 [[languages.en.menu.toolslist]]
 name = "Uptime Monitor"
 identifier = "en_uptime"
-url = "https://uptime.esolia.pro"
+url = "http://uptime.esolia.pro"
 pre = "eSolia Uptime Monitor built with real-time data from a GitHub repository using GitHub Actions, Issues, and Pages. Powered by Upptime."
 post = "_blank"
 weight = 11
