--- a/config.toml
+++ b/config.toml
@@ -313,7 +313,7 @@ Analytics = "YHYBNXPJ"
 name = "Uptime Monitor"
 identifier = "en_uptime"
 url = "https://status.esolia.pro"
-pre = "eSolia Uptime Monitor built with real-time data from a GitHub repository using GitHub Actions, Issues, and Pages. Powered by Upptime."
+pre = "eSolia Uptime Monitor powered by Apex Ping and Apex Up."
 post = "_blank"
 weight = 11
 
@@ -568,7 +568,7 @@ help  = "ヘルプ"
     name = "Uptime Monitor"
     identifier = "ja_uptime"
     url = "https://status.esolia.pro"
-    pre = "イソリアのアップタイム監視システムは、Githubリポジトリーのアクション、イッシュー、ページの組合わせで、リアルタイムでシステムステータス確認を可能にしてくれます。パワード・バイ・Upptime"
+    pre = "イソリアのアップタイム監視システムは、リアルタイムでシステムステータス確認を可能にしてくれます。パワード・バイ・Apex Ping & Apex Up"
     post = "_blank"
     weight = 11
 
