--- a/.s3deploy.yml
+++ b/.s3deploy.yml
@@ -50,4 +50,9 @@ routes:
     - route: "^.+\\.(html|xml|json)$"
       headers:
          Vary: "Accept-Encoding"
+         Strict-Transport-Security: "max-age=31536000; includeSubDomains; preload"
+         X-Frame-Options: "SAMEORIGIN"
+         Referrer-Policy: "strict-origin"
+         X-Content-Type-Options: "nosniff"
+         X-Powered-By: "AWS"
       gzip: true
