--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ jobs:
       - deploy:
           name: Deploy to AWS S3
           command: |
-            if [ "${CIRCLE_BRANCH}" = "master" ]; then
+            if [ "${CIRCLE_BRANCH}" = "main" ]; then
               ./s3deploy -source=$HUGO_BUILD_DIR/en -region=us-east-1 -bucket=$AWS_S3_ESOLIACOM_BKTNAME -distribution-id=$AWS_CF_ESOLIACOM_DISTN
               ./s3deploy -source=$HUGO_BUILD_DIR/ja -region=us-east-1 -bucket=$AWS_S3_ESOLIACOJP_BKTNAME -distribution-id=$AWS_CF_ESOLIACOJP_DISTN
               curl -A "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13) AppleWebKit/604.1.38 (KHTML, like Gecko) Version/11.0 Safari/604.1.38" "http://pingomatic.com/ping/?title=イソリア+バイリンガル+IT+アウトソーシング&blogurl=https%3A%2F%2Fesolia.co.jp&rssurl=https%3A%2F%2Fesolia.co.jp%2Findex.xml&chk_weblogscom=on&chk_blogs=on&chk_feedburner=on&chk_newsgator=on&chk_myyahoo=on&chk_pubsubcom=on&chk_blogdigger=on&chk_weblogalot=on&chk_newsisfree=on&chk_topicexchange=on&chk_google=on&chk_tailrank=on&chk_skygrid=on&chk_collecta=on&chk_superfeedr=on"
@@ -86,7 +86,7 @@ jobs:
               curl "http://www.google.com/webmasters/tools/ping?sitemap=https%3A%2F%2Fesolia.com%2Fsitemap.xml"
               curl "http://www.bing.com/webmaster/ping.aspx?siteMap=https%3A%2F%2Fesolia.com%2Fsitemap.xml"
             else
-              echo "Not master branch, dry run only"
+              echo "Not main branch, dry run only"
             fi
 workflows:
   version: 2
@@ -100,6 +100,6 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - main
     jobs:
       - build
