Fix circleci err adding BUCAJS_HASH to whitelist

--- a/config.toml
+++ b/config.toml
@@ -28,7 +28,7 @@ enableRobotsTXT = "true"
     osEnv = ['(?i)^(PATH|PATHEXT|APPDATA|TMP|TEMP|TERM)$']
 
   [security.funcs]
-    getenv = ['^HUGO_', 'PWD', 'MAINCSS_HASH', 'MAINJS_HASH']
+    getenv = ['^HUGO_', 'PWD', 'MAINCSS_HASH', 'MAINJS_HASH', 'BUCAJS_HASH']
 
   [security.http]
     methods = ['(?i)GET|POST']
