--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,7 +65,7 @@ jobs:
         uses: denoland/deployctl@v1
         with:
           project: esolia-co-jp # the name of the project on Deno Deploy
-          entrypoint: index.ts # wraps the static output files
+          entrypoint: index.ja.ts # wraps the static output files
           root: public/ja # Where the built HTML/CSS/JS files are located.
 
       - name: Deploy EN site to Deno Deploy
@@ -73,7 +73,7 @@ jobs:
         uses: denoland/deployctl@v1
         with:
           project: esolia-com # the name of the project on Deno Deploy
-          entrypoint: index.ts # wraps the static output files
+          entrypoint: index.en.ts # wraps the static output files
           root: public/en # Where the built HTML/CSS/JS files are located.
 
       - name: Check folder contents and output
