--- a/config.toml
+++ b/config.toml
@@ -82,6 +82,7 @@ enableRobotsTXT = "true"
 
 [outputs]
     home = [ "HTML", "RSS", "JSON" ]
+    section = [ "HTML", "RSS" ]
 
 [imaging]
 # Default resample filter used for resizing. Default is Box,
