--- a/data/general.yaml
+++ b/data/general.yaml
@@ -1,5 +1,5 @@
 images:
- - /img/eSolia-Logo-Flat-2015.png
+ - /img/logo_horiz_darkblue_bgtransparent 2_web.png
  - /img/eSolia-Cogley-eSolia-Office-Exterior-20130530.jpg
  - /img/eSolia-Cogley-Office-Interior.jpg
  - /img/eSolia-Cogley-At-Work.png
